xc3_shader/src/snapshots/xc3 ch01027000.44.snap
---
source: xc3_shader/src/database.rs
---
var0 = MonochromeX(U_Mate.gMatCol.x, U_Mate.gMatCol.y, U_Mate.gMatCol.z, U_Mate.gWrkFl4[1].y);
o0.x = var0;

var0 = MonochromeY(U_Mate.gMatCol.x, U_Mate.gMatCol.y, U_Mate.gMatCol.z, U_Mate.gWrkFl4[1].y);
o0.y = var0;

var0 = MonochromeZ(U_Mate.gMatCol.x, U_Mate.gMatCol.y, U_Mate.gMatCol.z, U_Mate.gWrkFl4[1].y);
o0.z = var0;

var0 = Add(vColor.y, 0.004);
var1 = Clamp(var0, 0.0, 1.0);
var2 = Mul(var1, 3.0);
var3 = Truncate(var2);
var4 = Max(var3, 0.0);
var5 = Uint(var4);
var6 = Int(var5);
var7 = LeftShift(var6, 6);
var8 = Uint(var7);
var9 = Float(var8);
var10 = Mul(var9, 0.003921569);
o0.w = var10;

o1.x = U_Mate.gWrkFl4[0].w;

o1.y = U_Mate.gWrkFl4[0].z;

o1.z = U_Mate.gWrkFl4[0].x;

o1.w = 0.008235293;

o2.z = 1.0;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjW(var0, var1, var2);
var4 = Div(1.0, var3);
var5 = MatMulPointProjX(var0, var1, var2);
var6 = Div(var5, var3);
var7 = Negate(var6);
var8 = Fma(var4, var5, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = MatMulPointProjY(var0, var1, var2);
var12 = Div(var11, var3);
var13 = Negate(var12);
var14 = Fma(var4, var11, var13);
var15 = Mul(var14, 0.5);
var16 = Abs(var15);
var17 = Max(var10, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = Abs(var19);
var21 = InverseSqrt(var20);
var22 = Div(1.0, var21);
o3.x = var22;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjW(var0, var1, var2);
var4 = Div(1.0, var3);
var5 = MatMulPointProjY(var0, var1, var2);
var6 = Div(var5, var3);
var7 = Negate(var6);
var8 = Fma(var4, var5, var7);
var9 = Mul(var8, 0.5);
var10 = MatMulPointProjX(var0, var1, var2);
var11 = Div(var10, var3);
var12 = Negate(var11);
var13 = Fma(var4, var10, var12);
var14 = Mul(var13, 0.5);
var15 = Abs(var14);
var16 = Abs(var9);
var17 = Max(var15, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = Abs(var19);
var21 = InverseSqrt(var20);
var22 = Div(1.0, var21);
o3.y = var22;

o3.z = 0.0;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjW(var0, var1, var2);
var4 = Div(1.0, var3);
var5 = MatMulPointProjX(var0, var1, var2);
var6 = Div(var5, var3);
var7 = Negate(var6);
var8 = Fma(var4, var5, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = MatMulPointProjY(var0, var1, var2);
var12 = Div(var11, var3);
var13 = Negate(var12);
var14 = Fma(var4, var11, var13);
var15 = Mul(var14, 0.5);
var16 = Abs(var15);
var17 = Max(var10, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = GreaterEqual(var19, 0.0);
var21 = Select(var20, 1.0, 0.0);
var22 = Div(var15, var18);
var23 = GreaterEqual(var22, 0.0);
var24 = Select(var23, 1.0, 0.0);
var25 = Mul(var24, 0.6666667);
var26 = Fma(var21, 0.33333334, var25);
var27 = Add(var26, 0.01);
o3.w = var27;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Sub(var6, var7);
o4.x = var8;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Mul(var7, 0.003921569);
var9 = Floor(var8);
var10 = Sub(var8, var9);
o4.y = var10;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Mul(var7, 0.003921569);
var9 = Floor(var8);
var10 = Mul(var9, 0.003921569);
o4.z = var10;

o4.w = vColor.x;

var0 = Monochrome(U_Mate.gMatCol.xyz, U_Mate.gWrkFl4[1].yyy).xyz;
o0.xyz = var0;
