xc3_shader/src/snapshots/xc3 ch01027000.87.snap
---
source: xc3_shader/src/database.rs
---
var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = NormalizeX(var0, var1, var2);
var4 = NormalizeY(var0, var1, var2);
var5 = NormalizeZ(var0, var1, var2);
var6 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var7 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var8 = AddNormalX(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var6, var7).x, Texture(gTResidentTex09, var6, var7).y, U_Mate.gWrkFl4[1].x);
var9 = AddNormalY(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var6, var7).x, Texture(gTResidentTex09, var6, var7).y, U_Mate.gWrkFl4[1].x);
var10 = NormalMapX(var8, var9);
var11 = NormalMapY(var8, var9);
var12 = NormalMapZ(var8, var9);
var13 = ReflectX(var3, var4, var5, var10, var11, var12);
var14 = Fma(var13, U_Mate.gWrkFl4[0].z, 0.5);
var15 = ReflectY(var3, var4, var5, var10, var11, var12);
var16 = Fma(var15, U_Mate.gWrkFl4[0].w, 0.5);
var17 = Fma(Texture(gTResidentTex03, var14, var16).x, Texture(s1, vTex0.x, vTex0.y).x, Texture(s0, vTex0.x, vTex0.y).x);
var18 = Fma(Texture(gTResidentTex03, var14, var16).y, Texture(s1, vTex0.x, vTex0.y).x, Texture(s0, vTex0.x, vTex0.y).y);
var19 = Fma(Texture(gTResidentTex03, var14, var16).z, Texture(s1, vTex0.x, vTex0.y).x, Texture(s0, vTex0.x, vTex0.y).z);
var20 = MonochromeX(var17, var18, var19, U_Mate.gWrkFl4[1].w);
o0.x = var20;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = NormalizeX(var0, var1, var2);
var4 = NormalizeY(var0, var1, var2);
var5 = NormalizeZ(var0, var1, var2);
var6 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var7 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var8 = AddNormalX(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var6, var7).x, Texture(gTResidentTex09, var6, var7).y, U_Mate.gWrkFl4[1].x);
var9 = AddNormalY(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var6, var7).x, Texture(gTResidentTex09, var6, var7).y, U_Mate.gWrkFl4[1].x);
var10 = NormalMapX(var8, var9);
var11 = NormalMapY(var8, var9);
var12 = NormalMapZ(var8, var9);
var13 = ReflectX(var3, var4, var5, var10, var11, var12);
var14 = Fma(var13, U_Mate.gWrkFl4[0].z, 0.5);
var15 = ReflectY(var3, var4, var5, var10, var11, var12);
var16 = Fma(var15, U_Mate.gWrkFl4[0].w, 0.5);
var17 = Fma(Texture(gTResidentTex03, var14, var16).x, Texture(s1, vTex0.x, vTex0.y).x, Texture(s0, vTex0.x, vTex0.y).x);
var18 = Fma(Texture(gTResidentTex03, var14, var16).y, Texture(s1, vTex0.x, vTex0.y).x, Texture(s0, vTex0.x, vTex0.y).y);
var19 = Fma(Texture(gTResidentTex03, var14, var16).z, Texture(s1, vTex0.x, vTex0.y).x, Texture(s0, vTex0.x, vTex0.y).z);
var20 = MonochromeY(var17, var18, var19, U_Mate.gWrkFl4[1].w);
o0.y = var20;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = NormalizeX(var0, var1, var2);
var4 = NormalizeY(var0, var1, var2);
var5 = NormalizeZ(var0, var1, var2);
var6 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var7 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var8 = AddNormalX(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var6, var7).x, Texture(gTResidentTex09, var6, var7).y, U_Mate.gWrkFl4[1].x);
var9 = AddNormalY(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var6, var7).x, Texture(gTResidentTex09, var6, var7).y, U_Mate.gWrkFl4[1].x);
var10 = NormalMapX(var8, var9);
var11 = NormalMapY(var8, var9);
var12 = NormalMapZ(var8, var9);
var13 = ReflectX(var3, var4, var5, var10, var11, var12);
var14 = Fma(var13, U_Mate.gWrkFl4[0].z, 0.5);
var15 = ReflectY(var3, var4, var5, var10, var11, var12);
var16 = Fma(var15, U_Mate.gWrkFl4[0].w, 0.5);
var17 = Fma(Texture(gTResidentTex03, var14, var16).x, Texture(s1, vTex0.x, vTex0.y).x, Texture(s0, vTex0.x, vTex0.y).x);
var18 = Fma(Texture(gTResidentTex03, var14, var16).y, Texture(s1, vTex0.x, vTex0.y).x, Texture(s0, vTex0.x, vTex0.y).y);
var19 = Fma(Texture(gTResidentTex03, var14, var16).z, Texture(s1, vTex0.x, vTex0.y).x, Texture(s0, vTex0.x, vTex0.y).z);
var20 = MonochromeZ(var17, var18, var19, U_Mate.gWrkFl4[1].w);
o0.z = var20;

var0 = Add(vColor.y, 0.004);
var1 = Clamp(var0, 0.0, 1.0);
var2 = Mul(var1, 3.0);
var3 = Truncate(var2);
var4 = Max(var3, 0.0);
var5 = Uint(var4);
var6 = Int(var5);
var7 = LeftShift(var6, 6);
var8 = Uint(var7);
var9 = Float(var8);
var10 = Mul(var9, 0.003921569);
o0.w = var10;

o1.x = Texture(s3, vTex0.x, vTex0.y).y;

o1.y = Texture(s1, vTex0.x, vTex0.y).y;

o1.z = U_Mate.gWrkFl4[1].y;

o1.w = 0.008235293;

var0 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var1 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var2 = AddNormalX(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var0, var1).x, Texture(gTResidentTex09, var0, var1).y, U_Mate.gWrkFl4[1].x);
o2.x = var2;

var0 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var1 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var2 = AddNormalY(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var0, var1).x, Texture(gTResidentTex09, var0, var1).y, U_Mate.gWrkFl4[1].x);
o2.y = var2;

o2.z = Texture(s1, vTex0.x, vTex0.y).z;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjW(var0, var1, var2);
var4 = Div(1.0, var3);
var5 = MatMulPointProjX(var0, var1, var2);
var6 = Div(var5, var3);
var7 = Negate(var6);
var8 = Fma(var4, var5, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = MatMulPointProjY(var0, var1, var2);
var12 = Div(var11, var3);
var13 = Negate(var12);
var14 = Fma(var4, var11, var13);
var15 = Mul(var14, 0.5);
var16 = Abs(var15);
var17 = Max(var10, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = Abs(var19);
var21 = InverseSqrt(var20);
var22 = Div(1.0, var21);
o3.x = var22;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjW(var0, var1, var2);
var4 = Div(1.0, var3);
var5 = MatMulPointProjY(var0, var1, var2);
var6 = Div(var5, var3);
var7 = Negate(var6);
var8 = Fma(var4, var5, var7);
var9 = Mul(var8, 0.5);
var10 = MatMulPointProjX(var0, var1, var2);
var11 = Div(var10, var3);
var12 = Negate(var11);
var13 = Fma(var4, var10, var12);
var14 = Mul(var13, 0.5);
var15 = Abs(var14);
var16 = Abs(var9);
var17 = Max(var15, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = Abs(var19);
var21 = InverseSqrt(var20);
var22 = Div(1.0, var21);
o3.y = var22;

o3.z = 0.0;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjW(var0, var1, var2);
var4 = Div(1.0, var3);
var5 = MatMulPointProjX(var0, var1, var2);
var6 = Div(var5, var3);
var7 = Negate(var6);
var8 = Fma(var4, var5, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = MatMulPointProjY(var0, var1, var2);
var12 = Div(var11, var3);
var13 = Negate(var12);
var14 = Fma(var4, var11, var13);
var15 = Mul(var14, 0.5);
var16 = Abs(var15);
var17 = Max(var10, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = GreaterEqual(var19, 0.0);
var21 = Select(var20, 1.0, 0.0);
var22 = Div(var15, var18);
var23 = GreaterEqual(var22, 0.0);
var24 = Select(var23, 1.0, 0.0);
var25 = Mul(var24, 0.6666667);
var26 = Fma(var21, 0.33333334, var25);
var27 = Add(var26, 0.01);
o3.w = var27;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Sub(var6, var7);
o4.x = var8;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Mul(var7, 0.003921569);
var9 = Floor(var8);
var10 = Sub(var8, var9);
o4.y = var10;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Mul(var7, 0.003921569);
var9 = Floor(var8);
var10 = Mul(var9, 0.003921569);
o4.z = var10;

o4.w = vColor.x;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = NormalizeX(var0, var1, var2);
var4 = NormalizeY(var0, var1, var2);
var5 = NormalizeZ(var0, var1, var2);
var6 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var7 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var8 = AddNormalX(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var6, var7).x, Texture(gTResidentTex09, var6, var7).y, U_Mate.gWrkFl4[1].x);
var9 = AddNormalY(Texture(s2, vTex0.x, vTex0.y).x, Texture(s2, vTex0.x, vTex0.y).y, Texture(gTResidentTex09, var6, var7).x, Texture(gTResidentTex09, var6, var7).y, U_Mate.gWrkFl4[1].x);
var10 = NormalMapX(var8, var9);
var11 = NormalMapY(var8, var9);
var12 = NormalMapZ(var8, var9);
var13 = ReflectX(var3, var4, var5, var10, var11, var12);
var14 = Fma(var13, U_Mate.gWrkFl4[0].z, 0.5);
var15 = ReflectY(var3, var4, var5, var10, var11, var12);
var16 = Fma(var15, U_Mate.gWrkFl4[0].w, 0.5);
var0 = Fma(Texture(gTResidentTex03, var14, var16).xyz, Texture(s1, vTex0.x, vTex0.y).xxx, Texture(s0, vTex0.x, vTex0.y).xyz);
var1 = Monochrome(var0, U_Mate.gWrkFl4[1].www).xyz;
o0.xyz = var1;
