xc3_shader/src/snapshots/xc3 ch02010110.28.snap
---
source: xc3_shader/src/database.rs
---
var0 = MulRatio(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x, U_Mate.gWrkFl4[0].z);
var1 = TexParallaxX(vTex0.x, var0);
var2 = Abs(var1);
var3 = TexParallaxY(vTex0.y, var0);
var4 = MonochromeX(Texture(s0, var2, var3).x, Texture(s0, var2, var3).y, Texture(s0, var2, var3).z, U_Mate.gWrkFl4[2].z);
o0.x = var4;

var0 = MulRatio(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x, U_Mate.gWrkFl4[0].z);
var1 = TexParallaxX(vTex0.x, var0);
var2 = Abs(var1);
var3 = TexParallaxY(vTex0.y, var0);
var4 = MonochromeY(Texture(s0, var2, var3).x, Texture(s0, var2, var3).y, Texture(s0, var2, var3).z, U_Mate.gWrkFl4[2].z);
o0.y = var4;

var0 = MulRatio(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x, U_Mate.gWrkFl4[0].z);
var1 = TexParallaxX(vTex0.x, var0);
var2 = Abs(var1);
var3 = TexParallaxY(vTex0.y, var0);
var4 = MonochromeZ(Texture(s0, var2, var3).x, Texture(s0, var2, var3).y, Texture(s0, var2, var3).z, U_Mate.gWrkFl4[2].z);
o0.z = var4;

o0.w = 0.0;

o1.x = Texture(s10, vTex0.x, vTex0.y).z;

o1.y = Texture(s8, vTex0.x, vTex0.y).x;

o1.z = U_Mate.gWrkFl4[1].y;

o1.w = 0.008235293;

var0 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[0].x, U_Mate.gTexMat[0].y, U_Mate.gTexMat[0].z, U_Mate.gTexMat[0].w);
var1 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[1].x, U_Mate.gTexMat[1].y, U_Mate.gTexMat[1].z, U_Mate.gTexMat[1].w);
var2 = Mix(Texture(s6, vTex0.x, vTex0.y).x, Texture(s7, var0, var1).x, Texture(s1, vTex0.x, vTex0.y).x);
o2.x = var2;

var0 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[0].x, U_Mate.gTexMat[0].y, U_Mate.gTexMat[0].z, U_Mate.gTexMat[0].w);
var1 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[1].x, U_Mate.gTexMat[1].y, U_Mate.gTexMat[1].z, U_Mate.gTexMat[1].w);
var2 = Mix(Texture(s6, vTex0.x, vTex0.y).y, Texture(s7, var0, var1).y, Texture(s1, vTex0.x, vTex0.y).x);
o2.y = var2;

o2.z = Texture(s9, vTex0.x, vTex0.y).z;

var0 = Div(1.0, vPos.w);
var1 = Div(vPos.x, vPos.w);
var2 = Negate(var1);
var3 = Fma(var0, vPos.x, var2);
var4 = Mul(var3, 0.5);
var5 = Abs(var4);
var6 = Div(vPos.y, vPos.w);
var7 = Negate(var6);
var8 = Fma(var0, vPos.y, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = Max(var5, var10);
var12 = Max(var11, 1.0);
var13 = Div(var4, var12);
var14 = Abs(var13);
var15 = InverseSqrt(var14);
var16 = Div(1.0, var15);
o3.x = var16;

var0 = Div(1.0, vPos.w);
var1 = Div(vPos.y, vPos.w);
var2 = Negate(var1);
var3 = Fma(var0, vPos.y, var2);
var4 = Mul(var3, 0.5);
var5 = Div(vPos.x, vPos.w);
var6 = Negate(var5);
var7 = Fma(var0, vPos.x, var6);
var8 = Mul(var7, 0.5);
var9 = Abs(var8);
var10 = Abs(var4);
var11 = Max(var9, var10);
var12 = Max(var11, 1.0);
var13 = Div(var4, var12);
var14 = Abs(var13);
var15 = InverseSqrt(var14);
var16 = Div(1.0, var15);
o3.y = var16;

o3.z = 0.0;

var0 = Div(1.0, vPos.w);
var1 = Div(vPos.x, vPos.w);
var2 = Negate(var1);
var3 = Fma(var0, vPos.x, var2);
var4 = Mul(var3, 0.5);
var5 = Abs(var4);
var6 = Div(vPos.y, vPos.w);
var7 = Negate(var6);
var8 = Fma(var0, vPos.y, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = Max(var5, var10);
var12 = Max(var11, 1.0);
var13 = Div(var4, var12);
var14 = GreaterEqual(var13, 0.0);
var15 = Select(var14, 1.0, 0.0);
var16 = Div(var9, var12);
var17 = GreaterEqual(var16, 0.0);
var18 = Select(var17, 1.0, 0.0);
var19 = Mul(var18, 0.6666667);
var20 = Fma(var15, 0.33333334, var19);
var21 = Add(var20, 0.01);
o3.w = var21;

var0 = Mul(vPos.z, 8.0);
var1 = Floor(var0);
var2 = Sub(var0, var1);
o4.x = var2;

var0 = Mul(vPos.z, 8.0);
var1 = Floor(var0);
var2 = Mul(var1, 0.003921569);
var3 = Floor(var2);
var4 = Sub(var2, var3);
o4.y = var4;

var0 = Mul(vPos.z, 8.0);
var1 = Floor(var0);
var2 = Mul(var1, 0.003921569);
var3 = Floor(var2);
var4 = Mul(var3, 0.003921569);
o4.z = var4;

o4.w = 0.5;

var0 = Clamp(U_Mate.gWrkFl4[1].w, 0.0, 1.0);
var1 = Negate(U_Static.gEtcParm.w);
var2 = Fma(var0, var1, var0);
var3 = Add(var2, U_Static.gEtcParm.w);
var4 = MulRatio(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x, U_Mate.gWrkFl4[0].z);
var5 = TexParallaxX(vTex0.x, var4);
var6 = Abs(var5);
var7 = TexParallaxY(vTex0.y, var4);
var8 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[2].x, U_Mate.gTexMat[2].y, U_Mate.gTexMat[2].z, U_Mate.gTexMat[2].w);
var9 = TexParallaxX(var8, var4);
var10 = Abs(var9);
var11 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[3].x, U_Mate.gTexMat[3].y, U_Mate.gTexMat[3].z, U_Mate.gTexMat[3].w);
var12 = TexParallaxY(var11, var4);
var13 = Fma(Texture(s1, var6, var7).x, Texture(s2, var10, var12).x, Texture(s1, var6, var7).x);
var14 = Mul(Texture(s3, var6, var7).x, var13);
var15 = MulRatio(var14, U_Mate.gWrkCol[1].x, U_Mate.gWrkFl4[0].w);
var16 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[4].x, U_Mate.gTexMat[4].y, U_Mate.gTexMat[4].z, U_Mate.gTexMat[4].w);
var17 = TexParallaxX(var16, var4);
var18 = Abs(var17);
var19 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[5].x, U_Mate.gTexMat[5].y, U_Mate.gTexMat[5].z, U_Mate.gTexMat[5].w);
var20 = TexParallaxY(var19, var4);
var21 = Negate(Texture(s4, var18, var20).x);
var22 = Fma(var15, var21, Texture(s5, var6, var7).x);
var23 = Mul(U_Mate.gWrkFl4[1].x, U_Mate.gWrkCol[2].x);
var24 = Mul(var15, Texture(s4, var18, var20).x);
var25 = Fma(var22, var23, var24);
var26 = Fma(Texture(s1, var6, var7).x, Texture(s2, var10, var12).y, Texture(s1, var6, var7).y);
var27 = Mul(Texture(s3, var6, var7).y, var26);
var28 = MulRatio(var27, U_Mate.gWrkCol[1].y, U_Mate.gWrkFl4[0].w);
var29 = Negate(Texture(s4, var18, var20).y);
var30 = Fma(var28, var29, Texture(s5, var6, var7).y);
var31 = Mul(var28, Texture(s4, var18, var20).y);
var32 = Fma(var30, var23, var31);
var33 = Fma(Texture(s1, var6, var7).x, Texture(s2, var10, var12).z, Texture(s1, var6, var7).z);
var34 = Mul(Texture(s3, var6, var7).z, var33);
var35 = MulRatio(var34, U_Mate.gWrkCol[1].z, U_Mate.gWrkFl4[0].w);
var36 = Negate(Texture(s4, var18, var20).z);
var37 = Fma(var35, var36, Texture(s5, var6, var7).z);
var38 = Mul(var35, Texture(s4, var18, var20).z);
var39 = Fma(var37, var23, var38);
var40 = MonochromeX(var25, var32, var39, U_Mate.gWrkFl4[2].z);
var41 = Max(0.0, var40);
var42 = Power(var41, U_Static.gCDep.w);
var43 = Mul(var42, U_Mate.gWrkFl4[2].x);
var44 = Mul(var3, var43);
o5.x = var44;

var0 = Clamp(U_Mate.gWrkFl4[1].w, 0.0, 1.0);
var1 = Negate(U_Static.gEtcParm.w);
var2 = Fma(var0, var1, var0);
var3 = Add(var2, U_Static.gEtcParm.w);
var4 = MulRatio(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x, U_Mate.gWrkFl4[0].z);
var5 = TexParallaxX(vTex0.x, var4);
var6 = Abs(var5);
var7 = TexParallaxY(vTex0.y, var4);
var8 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[2].x, U_Mate.gTexMat[2].y, U_Mate.gTexMat[2].z, U_Mate.gTexMat[2].w);
var9 = TexParallaxX(var8, var4);
var10 = Abs(var9);
var11 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[3].x, U_Mate.gTexMat[3].y, U_Mate.gTexMat[3].z, U_Mate.gTexMat[3].w);
var12 = TexParallaxY(var11, var4);
var13 = Fma(Texture(s1, var6, var7).x, Texture(s2, var10, var12).x, Texture(s1, var6, var7).x);
var14 = Mul(Texture(s3, var6, var7).x, var13);
var15 = MulRatio(var14, U_Mate.gWrkCol[1].x, U_Mate.gWrkFl4[0].w);
var16 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[4].x, U_Mate.gTexMat[4].y, U_Mate.gTexMat[4].z, U_Mate.gTexMat[4].w);
var17 = TexParallaxX(var16, var4);
var18 = Abs(var17);
var19 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[5].x, U_Mate.gTexMat[5].y, U_Mate.gTexMat[5].z, U_Mate.gTexMat[5].w);
var20 = TexParallaxY(var19, var4);
var21 = Negate(Texture(s4, var18, var20).x);
var22 = Fma(var15, var21, Texture(s5, var6, var7).x);
var23 = Mul(U_Mate.gWrkFl4[1].x, U_Mate.gWrkCol[2].x);
var24 = Mul(var15, Texture(s4, var18, var20).x);
var25 = Fma(var22, var23, var24);
var26 = Fma(Texture(s1, var6, var7).x, Texture(s2, var10, var12).y, Texture(s1, var6, var7).y);
var27 = Mul(Texture(s3, var6, var7).y, var26);
var28 = MulRatio(var27, U_Mate.gWrkCol[1].y, U_Mate.gWrkFl4[0].w);
var29 = Negate(Texture(s4, var18, var20).y);
var30 = Fma(var28, var29, Texture(s5, var6, var7).y);
var31 = Mul(var28, Texture(s4, var18, var20).y);
var32 = Fma(var30, var23, var31);
var33 = Fma(Texture(s1, var6, var7).x, Texture(s2, var10, var12).z, Texture(s1, var6, var7).z);
var34 = Mul(Texture(s3, var6, var7).z, var33);
var35 = MulRatio(var34, U_Mate.gWrkCol[1].z, U_Mate.gWrkFl4[0].w);
var36 = Negate(Texture(s4, var18, var20).z);
var37 = Fma(var35, var36, Texture(s5, var6, var7).z);
var38 = Mul(var35, Texture(s4, var18, var20).z);
var39 = Fma(var37, var23, var38);
var40 = MonochromeY(var25, var32, var39, U_Mate.gWrkFl4[2].z);
var41 = Max(0.0, var40);
var42 = Power(var41, U_Static.gCDep.w);
var43 = Mul(var42, U_Mate.gWrkFl4[2].x);
var44 = Mul(var3, var43);
o5.y = var44;

var0 = Clamp(U_Mate.gWrkFl4[1].w, 0.0, 1.0);
var1 = Negate(U_Static.gEtcParm.w);
var2 = Fma(var0, var1, var0);
var3 = Add(var2, U_Static.gEtcParm.w);
var4 = MulRatio(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x, U_Mate.gWrkFl4[0].z);
var5 = TexParallaxX(vTex0.x, var4);
var6 = Abs(var5);
var7 = TexParallaxY(vTex0.y, var4);
var8 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[2].x, U_Mate.gTexMat[2].y, U_Mate.gTexMat[2].z, U_Mate.gTexMat[2].w);
var9 = TexParallaxX(var8, var4);
var10 = Abs(var9);
var11 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[3].x, U_Mate.gTexMat[3].y, U_Mate.gTexMat[3].z, U_Mate.gTexMat[3].w);
var12 = TexParallaxY(var11, var4);
var13 = Fma(Texture(s1, var6, var7).x, Texture(s2, var10, var12).x, Texture(s1, var6, var7).x);
var14 = Mul(Texture(s3, var6, var7).x, var13);
var15 = MulRatio(var14, U_Mate.gWrkCol[1].x, U_Mate.gWrkFl4[0].w);
var16 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[4].x, U_Mate.gTexMat[4].y, U_Mate.gTexMat[4].z, U_Mate.gTexMat[4].w);
var17 = TexParallaxX(var16, var4);
var18 = Abs(var17);
var19 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[5].x, U_Mate.gTexMat[5].y, U_Mate.gTexMat[5].z, U_Mate.gTexMat[5].w);
var20 = TexParallaxY(var19, var4);
var21 = Negate(Texture(s4, var18, var20).x);
var22 = Fma(var15, var21, Texture(s5, var6, var7).x);
var23 = Mul(U_Mate.gWrkFl4[1].x, U_Mate.gWrkCol[2].x);
var24 = Mul(var15, Texture(s4, var18, var20).x);
var25 = Fma(var22, var23, var24);
var26 = Fma(Texture(s1, var6, var7).x, Texture(s2, var10, var12).y, Texture(s1, var6, var7).y);
var27 = Mul(Texture(s3, var6, var7).y, var26);
var28 = MulRatio(var27, U_Mate.gWrkCol[1].y, U_Mate.gWrkFl4[0].w);
var29 = Negate(Texture(s4, var18, var20).y);
var30 = Fma(var28, var29, Texture(s5, var6, var7).y);
var31 = Mul(var28, Texture(s4, var18, var20).y);
var32 = Fma(var30, var23, var31);
var33 = Fma(Texture(s1, var6, var7).x, Texture(s2, var10, var12).z, Texture(s1, var6, var7).z);
var34 = Mul(Texture(s3, var6, var7).z, var33);
var35 = MulRatio(var34, U_Mate.gWrkCol[1].z, U_Mate.gWrkFl4[0].w);
var36 = Negate(Texture(s4, var18, var20).z);
var37 = Fma(var35, var36, Texture(s5, var6, var7).z);
var38 = Mul(var35, Texture(s4, var18, var20).z);
var39 = Fma(var37, var23, var38);
var40 = MonochromeZ(var25, var32, var39, U_Mate.gWrkFl4[2].z);
var41 = Max(0.0, var40);
var42 = Power(var41, U_Static.gCDep.w);
var43 = Mul(var42, U_Mate.gWrkFl4[2].x);
var44 = Mul(var3, var43);
o5.z = var44;

o5.w = 1.0;

var0 = MulRatio(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x, U_Mate.gWrkFl4[0].z);
var1 = TexParallaxX(vTex0.x, var0);
var2 = Abs(var1);
var3 = TexParallaxY(vTex0.y, var0);
var0 = Monochrome(Texture(s0, var2, var3).xyz, U_Mate.gWrkFl4[2].zzz).xyz;
o0.xyz = var0;

var0 = Clamp(U_Mate.gWrkFl4[1].www, [0.0, 0.0, 0.0], [1.0, 1.0, 1.0]);
var1 = Negate(U_Static.gEtcParm.www);
var2 = Fma(var0, var1, var0);
var3 = Add(var2, U_Static.gEtcParm.www);
var0 = MulRatio(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x, U_Mate.gWrkFl4[0].z);
var1 = TexParallaxX(vTex0.x, var0);
var2 = Abs(var1);
var3 = TexParallaxY(vTex0.y, var0);
var4 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[2].x, U_Mate.gTexMat[2].y, U_Mate.gTexMat[2].z, U_Mate.gTexMat[2].w);
var5 = TexParallaxX(var4, var0);
var6 = Abs(var5);
var7 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[3].x, U_Mate.gTexMat[3].y, U_Mate.gTexMat[3].z, U_Mate.gTexMat[3].w);
var8 = TexParallaxY(var7, var0);
var4 = Fma(Texture(s1, var2, var3).xxx, Texture(s2, var6, var8).xyz, Texture(s1, var2, var3).xyz);
var5 = Mul(Texture(s3, var2, var3).xyz, var4);
var6 = MulRatio(var5, U_Mate.gWrkCol[1].xyz, U_Mate.gWrkFl4[0].www);
var9 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[4].x, U_Mate.gTexMat[4].y, U_Mate.gTexMat[4].z, U_Mate.gTexMat[4].w);
var10 = TexParallaxX(var9, var0);
var11 = Abs(var10);
var12 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[5].x, U_Mate.gTexMat[5].y, U_Mate.gTexMat[5].z, U_Mate.gTexMat[5].w);
var13 = TexParallaxY(var12, var0);
var7 = Negate(Texture(s4, var11, var13).xyz);
var8 = Fma(var6, var7, Texture(s5, var2, var3).xyz);
var9 = Mul(U_Mate.gWrkFl4[1].xxx, U_Mate.gWrkCol[2].xxx);
var10 = Mul(var6, Texture(s4, var11, var13).xyz);
var11 = Fma(var8, var9, var10);
var12 = Monochrome(var11, U_Mate.gWrkFl4[2].zzz).xyz;
var13 = Max([0.0, 0.0, 0.0], var12);
var14 = Power(var13, U_Static.gCDep.www);
var15 = Mul(var14, U_Mate.gWrkFl4[2].xxx);
var16 = Mul(var3, var15);
o5.xyz = var16;
