xc3_shader/src/snapshots/xc3 ch11021013.16.snap
---
source: xc3_shader/src/database.rs
---
var0 = Fresnel(U_Mate.gWrkFl4[0].z);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).x, U_Mate.gWrkCol[1].x, var0);
var2 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var3 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var4 = Mul(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].w);
var5 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[0].x, U_Mate.gTexMat[0].y, U_Mate.gTexMat[0].z, U_Mate.gTexMat[0].w);
var6 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[1].x, U_Mate.gTexMat[1].y, U_Mate.gTexMat[1].z, U_Mate.gTexMat[1].w);
var7 = MulRatio(var4, Texture(gTResidentTex05, var5, var6).x, U_Mate.gWrkFl4[1].x);
var8 = Mix(var1, Texture(gTResidentTex04, var2, var3).x, var7);
var9 = Mix(Texture(s0, vTex0.x, vTex0.y).y, U_Mate.gWrkCol[1].y, var0);
var10 = Mix(var9, Texture(gTResidentTex04, var2, var3).y, var7);
var11 = Mix(Texture(s0, vTex0.x, vTex0.y).z, U_Mate.gWrkCol[1].z, var0);
var12 = Mix(var11, Texture(gTResidentTex04, var2, var3).z, var7);
var13 = MonochromeX(var8, var10, var12, U_Mate.gWrkFl4[2].z);
o0.x = var13;

var0 = Fresnel(U_Mate.gWrkFl4[0].z);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).x, U_Mate.gWrkCol[1].x, var0);
var2 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var3 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var4 = Mul(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].w);
var5 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[0].x, U_Mate.gTexMat[0].y, U_Mate.gTexMat[0].z, U_Mate.gTexMat[0].w);
var6 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[1].x, U_Mate.gTexMat[1].y, U_Mate.gTexMat[1].z, U_Mate.gTexMat[1].w);
var7 = MulRatio(var4, Texture(gTResidentTex05, var5, var6).x, U_Mate.gWrkFl4[1].x);
var8 = Mix(var1, Texture(gTResidentTex04, var2, var3).x, var7);
var9 = Mix(Texture(s0, vTex0.x, vTex0.y).y, U_Mate.gWrkCol[1].y, var0);
var10 = Mix(var9, Texture(gTResidentTex04, var2, var3).y, var7);
var11 = Mix(Texture(s0, vTex0.x, vTex0.y).z, U_Mate.gWrkCol[1].z, var0);
var12 = Mix(var11, Texture(gTResidentTex04, var2, var3).z, var7);
var13 = MonochromeY(var8, var10, var12, U_Mate.gWrkFl4[2].z);
o0.y = var13;

var0 = Fresnel(U_Mate.gWrkFl4[0].z);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).x, U_Mate.gWrkCol[1].x, var0);
var2 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var3 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var4 = Mul(Texture(s1, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].w);
var5 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[0].x, U_Mate.gTexMat[0].y, U_Mate.gTexMat[0].z, U_Mate.gTexMat[0].w);
var6 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[1].x, U_Mate.gTexMat[1].y, U_Mate.gTexMat[1].z, U_Mate.gTexMat[1].w);
var7 = MulRatio(var4, Texture(gTResidentTex05, var5, var6).x, U_Mate.gWrkFl4[1].x);
var8 = Mix(var1, Texture(gTResidentTex04, var2, var3).x, var7);
var9 = Mix(Texture(s0, vTex0.x, vTex0.y).y, U_Mate.gWrkCol[1].y, var0);
var10 = Mix(var9, Texture(gTResidentTex04, var2, var3).y, var7);
var11 = Mix(Texture(s0, vTex0.x, vTex0.y).z, U_Mate.gWrkCol[1].z, var0);
var12 = Mix(var11, Texture(gTResidentTex04, var2, var3).z, var7);
var13 = MonochromeZ(var8, var10, var12, U_Mate.gWrkFl4[2].z);
o0.z = var13;

var0 = Add(vColor.y, 0.004);
var1 = Clamp(var0, 0.0, 1.0);
var2 = Mul(var1, 3.0);
var3 = Truncate(var2);
var4 = Max(var3, 0.0);
var5 = Uint(var4);
var6 = Int(var5);
var7 = LeftShift(var6, 6);
var8 = Uint(var7);
var9 = Float(var8);
var10 = Mul(var9, 0.003921569);
o0.w = var10;

o1.x = U_Mate.gWrkFl4[2].x;

o1.y = U_Mate.gWrkFl4[1].w;

o1.z = U_Mate.gWrkFl4[1].y;

o1.w = 0.008235293;

o2.x = Texture(s2, vTex0.x, vTex0.y).x;

o2.y = Texture(s2, vTex0.x, vTex0.y).y;

o2.z = 1.0;

var0 = Div(1.0, vPos.w);
var1 = Div(vPos.x, vPos.w);
var2 = Negate(var1);
var3 = Fma(var0, vPos.x, var2);
var4 = Mul(var3, 0.5);
var5 = Abs(var4);
var6 = Div(vPos.y, vPos.w);
var7 = Negate(var6);
var8 = Fma(var0, vPos.y, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = Max(var5, var10);
var12 = Max(var11, 1.0);
var13 = Div(var4, var12);
var14 = Abs(var13);
var15 = InverseSqrt(var14);
var16 = Div(1.0, var15);
o3.x = var16;

var0 = Div(1.0, vPos.w);
var1 = Div(vPos.y, vPos.w);
var2 = Negate(var1);
var3 = Fma(var0, vPos.y, var2);
var4 = Mul(var3, 0.5);
var5 = Div(vPos.x, vPos.w);
var6 = Negate(var5);
var7 = Fma(var0, vPos.x, var6);
var8 = Mul(var7, 0.5);
var9 = Abs(var8);
var10 = Abs(var4);
var11 = Max(var9, var10);
var12 = Max(var11, 1.0);
var13 = Div(var4, var12);
var14 = Abs(var13);
var15 = InverseSqrt(var14);
var16 = Div(1.0, var15);
o3.y = var16;

o3.z = 0.0;

var0 = Div(1.0, vPos.w);
var1 = Div(vPos.x, vPos.w);
var2 = Negate(var1);
var3 = Fma(var0, vPos.x, var2);
var4 = Mul(var3, 0.5);
var5 = Abs(var4);
var6 = Div(vPos.y, vPos.w);
var7 = Negate(var6);
var8 = Fma(var0, vPos.y, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = Max(var5, var10);
var12 = Max(var11, 1.0);
var13 = Div(var4, var12);
var14 = GreaterEqual(var13, 0.0);
var15 = Select(var14, 1.0, 0.0);
var16 = Div(var9, var12);
var17 = GreaterEqual(var16, 0.0);
var18 = Select(var17, 1.0, 0.0);
var19 = Mul(var18, 0.6666667);
var20 = Fma(var15, 0.33333334, var19);
var21 = Add(var20, 0.01);
o3.w = var21;

var0 = Mul(vPos.z, 8.0);
var1 = Floor(var0);
var2 = Sub(var0, var1);
o4.x = var2;

var0 = Mul(vPos.z, 8.0);
var1 = Floor(var0);
var2 = Mul(var1, 0.003921569);
var3 = Floor(var2);
var4 = Sub(var2, var3);
o4.y = var4;

var0 = Mul(vPos.z, 8.0);
var1 = Floor(var0);
var2 = Mul(var1, 0.003921569);
var3 = Floor(var2);
var4 = Mul(var3, 0.003921569);
o4.z = var4;

o4.w = vColor.x;

var0 = Fresnel(U_Mate.gWrkFl4[0].zzz);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).xyz, U_Mate.gWrkCol[1].xyz, var0);
var0 = Mul(vTex0.x, U_Mate.gWrkFl4[0].x);
var1 = Mul(vTex0.y, U_Mate.gWrkFl4[0].y);
var2 = Mul(Texture(s1, vTex0.x, vTex0.y).xxx, U_Mate.gWrkFl4[0].www);
var2 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[0].x, U_Mate.gTexMat[0].y, U_Mate.gTexMat[0].z, U_Mate.gTexMat[0].w);
var3 = TexMatrix(vTex0.x, vTex0.y, U_Mate.gTexMat[1].x, U_Mate.gTexMat[1].y, U_Mate.gTexMat[1].z, U_Mate.gTexMat[1].w);
var3 = MulRatio(var2, Texture(gTResidentTex05, var2, var3).xxx, U_Mate.gWrkFl4[1].xxx);
var4 = Mix(var1, Texture(gTResidentTex04, var0, var1).xyz, var3);
var5 = Monochrome(var4, U_Mate.gWrkFl4[2].zzz).xyz;
o0.xyz = var5;
